--- a/src/cardItemTemplate.html
+++ b/src/cardItemTemplate.html
@@ -1,4 +1,4 @@
-<div style="background-color:#b2b2b2;">
+<div style="background-color:#e2e1e1; border-radius: 0.5rem;">
   <table style="width:100%; font-size: 180%">
     <tr style="width:100%">
       <td style="width:20%; height:100%">
@@ -14,17 +14,32 @@
       </td>
     </tr>
   </table>
-  <table style="width:100%; font-size: 140%; margin-bottom:1rem">
-    <tr style="width:100%">
-      <td style="width:100%">
+  <table style="width:100%; font-size: 140%">
+    <tr style="width:100%;">
+      <td style="width:100%; border-bottom: #d2d2d2 0.025rem solid;">
         Excéntrico, respetado, disruptivo, creador alternativo. Convertía la
         chatarra en obras de arte y, por su trayectoria y personalidad, se había
         convertido en un&nbsp;...
       </td>
     </tr>
+  </table>
+  <table style="width:100%; font-size: 140%;">
     <tr style="width:100%">
-      <td>
+      <td style="width:95%; overflow:hidden; text-overflow:ellipsis">
         https://www.clarin.com/cultura/murio-artista-plastico-carlos-regazzoni_0_SuCzZt3Kq8.html
+      </td>
+      <td style="width:5%;">
+        <center style="font-size: 100%">❭</center>
+      </td>
+    </tr>
+  </table>
+  <table style="width:100%; margin-bottom:1rem">
+    <tr style="width:100%">
+      <td style="width:50%">
+        <center style="font-size: 80%">${article.source}</center>
+      </td>
+      <td style="width:50%">
+        <center style="font-size: 80%">${article.timeAgo}</center>
       </td>
     </tr>
   </table>
