--- a/src/cardItemTemplate.html
+++ b/src/cardItemTemplate.html
@@ -1,5 +1,5 @@
-<div style="background-color:#e2e1e1; border-radius: 0.5rem;">
-  <table style="width:100%; font-size: 180%">
+<div style="background-color:white; border: 2px solid black; border-bottom-left-radius: 0.5rem; border-top-left-radius: 0.5rem; border-left: 12px solid black;">
+  <table style="width:100%; font-size: 170%; font-family: BlenderProBold,sans-serif; text-transform: uppercase; color: white; background-color: #4d7f82;">
     <tr style="width:100%">
       <td style="width:20%; height:100%">
         <img
@@ -14,7 +14,7 @@
       </td>
     </tr>
   </table>
-  <table style="width:100%; font-size: 140%">
+  <table style="width:100%; font-size: 140%; color: #4d7f82;">
     <tr style="width:100%;">
       <td style="width:100%; border-bottom: #d2d2d2 0.025rem solid;">
         Excéntrico, respetado, disruptivo, creador alternativo. Convertía la
@@ -23,7 +23,7 @@
       </td>
     </tr>
   </table>
-  <table style="width:100%; font-size: 140%;">
+  <table style="width:100%; font-size: 140%; color: #4d7f82;">
     <tr style="width:100%">
       <td style="width:95%; overflow:hidden; text-overflow:ellipsis">
         https://www.clarin.com/cultura/murio-artista-plastico-carlos-regazzoni_0_SuCzZt3Kq8.html
@@ -33,7 +33,7 @@
       </td>
     </tr>
   </table>
-  <table style="width:100%; margin-bottom:1rem">
+  <table style="width:100%; margin-bottom:1rem; color: #4d7f82;">
     <tr style="width:100%">
       <td style="width:50%">
         <center style="font-size: 80%">${article.source}</center>
